{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 52,
  "lineage": "144b20dd-1128-4737-f350-41285c990951",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/networkInterfaces/nic-vm1",
            "internal_domain_name_suffix": "5dmfwhmr5azejbe4qgi3ygr2zg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main/subnets/snet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "60-45-BD-DA-DB-D1",
            "name": "nic-vm1",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "DevOpsResourceGroup",
            "virtual_machine_id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Compute/virtualMachines/vm1"
          },
          "dependencies": [
            "azurerm_subnet.subnet_vm1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/networkInterfaces/nic-vm2",
            "internal_domain_name_suffix": "5dmfwhmr5azejbe4qgi3ygr2zg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.10.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main/subnets/snet2"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "60-45-BD-EE-51-75",
            "name": "nic-vm2",
            "private_ip_address": "10.10.2.4",
            "private_ip_addresses": [
              "10.10.2.4"
            ],
            "resource_group_name": "DevOpsResourceGroup",
            "virtual_machine_id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Compute/virtualMachines/vm2"
          },
          "dependencies": [
            "azurerm_subnet.subnet_vm2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-vm1",
            "location": "eastus",
            "name": "nsg-vm1",
            "resource_group_name": "DevOpsResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.10.3.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow-db-from-vm1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-vm2",
            "location": "eastus",
            "name": "nsg-vm2",
            "resource_group_name": "DevOpsResourceGroup",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "10.10.3.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "deny-db-from-vm2",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_db_from_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.10.3.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "5432",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-vm1/securityRules/allow-db-from-vm1",
            "name": "allow-db-from-vm1",
            "network_security_group_name": "nsg-vm1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "DevOpsResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vm1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_db_from_vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "10.10.3.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "5432",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-vm2/securityRules/deny-db-from-vm2",
            "name": "deny-db-from-vm2",
            "network_security_group_name": "nsg-vm2",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "DevOpsResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vm2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "dbdelegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main/subnets/snet-db",
            "name": "snet-db",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "DevOpsResourceGroup",
            "virtual_network_name": "vnet-test-main"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main/subnets/snet1",
            "name": "snet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "DevOpsResourceGroup",
            "virtual_network_name": "vnet-test-main"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main/subnets/snet2",
            "name": "snet2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "DevOpsResourceGroup",
            "virtual_network_name": "vnet-test-main"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main/subnets/snet1",
            "network_security_group_id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-vm1",
            "subnet_id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main/subnets/snet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_vm1",
            "azurerm_subnet.subnet_vm1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc_vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main/subnets/snet2",
            "network_security_group_id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-vm2",
            "subnet_id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main/subnets/snet2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_vm2",
            "azurerm_subnet.subnet_vm2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1d5bd8f8-f891-4432-849e-8191dc1a3cce",
            "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main",
            "location": "eastus",
            "name": "vnet-test-main",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "DevOpsResourceGroup",
            "subnet": [
              {
                "address_prefixes": [
                  "10.10.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main/subnets/snet1",
                "name": "snet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-vm1"
              },
              {
                "address_prefixes": [
                  "10.10.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main/subnets/snet2",
                "name": "snet2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-vm2"
              },
              {
                "address_prefixes": [
                  "10.10.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "dbdelegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/466b6209-d050-463b-9aa5-f66f1d047d5e/resourceGroups/DevOpsResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-test-main/subnets/snet-db",
                "name": "snet-db",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "service_endpoints": [
                  "Microsoft.Storage"
                ]
              }
            ]
          }
        }
      ]
    }
  ]
}